# ree-l2-dapp-demo

./: .gitignore  README.md
ree-cookie-canister/: Cargo.toml  canister_ids.json  dfx.json  ree_cookie.did
ree-cookie-canister/src/: canister.rs  errors.rs  exchange.rs  lib.rs  log.rs  memory.rs  pool.rs  reorg.rs  state.rs  utils.rs
ree-cookie-canister/src/game/: game.rs  gamer.rs  mod.rs
ree-cookie-canister/tests/: register.rs  test.rs
ree-cookie-canister/tests/common/: args.rs  canister_call.rs  mod.rs  utils.rs
ree-cookie-frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ree-cookie-frontend-old/: package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ree-cookie-frontend-old/src/: App.tsx  main.tsx
ree-cookie-frontend-old/src/canister/cookie/: actor.ts  service.did.d.ts  service.did.js
ree-cookie-frontend-old/src/canister/internet-identity/: ii-client.ts  service.did.d.ts  service.did.js
ree-cookie-frontend-old/src/canister/orchestrator/: actor.ts  index.ts
ree-cookie-frontend-old/src/canister/rich-swap/: service.did.d.ts
ree-cookie-frontend-old/src/components/: AccountButton.tsx  AddLiquidity.tsx  ConnectButton.tsx  GameSteps.tsx  InitUtxoDialog.tsx  Register.tsx
ree-cookie-frontend-old/src/components/modals/: ConnetWalletModal.tsx  CreateGameModal.tsx
ree-cookie-frontend-old/src/constants/: coin-list.ts  common.ts  wallet.ts
ree-cookie-frontend-old/src/hooks/: use-fee-rate.ts  use-pool.ts
ree-cookie-frontend-old/src/layout/: Topbar.tsx
ree-cookie-frontend-old/src/pages/: Game.tsx  Hom.tsx
ree-cookie-frontend-old/src/types/: utxo.ts
ree-cookie-frontend-old/src/utils/: common.ts  transaction.ts
ree-cookie-frontend-old/src/utils/tx-helper/: common.ts  register.ts  withdraw.ts
ree-cookie-frontend-v3/: .eslintrc.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ree-cookie-frontend-v3/src/: App.tsx  main.tsx  transaction.ts
ree-cookie-frontend-v3/src/api/: chain-api.ts  magicEden.ts  ordiscan.ts  unisat.ts
ree-cookie-frontend-v3/src/canister/orchestrator/: actor.ts
ree-cookie-frontend-v3/src/canister/rich_ordi/: actor.ts  service.did.d.ts  service.did.js
ree-cookie-frontend-v3/src/components/: AccountButton.tsx  AuctionModal.tsx  ConnectButton.tsx  ConnetWalletModal.tsx  DepositNftModal.tsx  HomeShow.tsx  InscriptionImg.tsx  InvokeModal.tsx  LockNftListModal.tsx  NftCard.tsx  OwnedNftList.tsx  PoolList.tsx  PoolNftList.tsx  TestNftCard.tsx
ree-cookie-frontend-v3/src/constants/: coin-list.ts  common.ts  index.ts  wallet.ts
ree-cookie-frontend-v3/src/hooks/: useBlock.ts  useExchange.ts  useInscription.ts  useOrchestrator.ts  usePool.ts  usePoolNfts.ts  useRunes.ts  useTransaction.ts  useUtxo.ts  user-utxo.ts
ree-cookie-frontend-v3/src/layout/: Topbar.tsx
ree-cookie-frontend-v3/src/layout/sidebar/: IntentionList.tsx  Sidebar.tsx
ree-cookie-frontend-v3/src/pages/: Debug.tsx  Home.tsx  Pool.tsx  Pools.tsx  Profile.tsx
ree-cookie-frontend-v3/src/store/: autcion-modal-store.ts  connect-wallet-modal.ts  spent-utxos.ts  stake-modal.ts
ree-cookie-frontend-v3/src/types/: ReeInvoker.ts  coin.ts  exchange.ts  global.d.ts  index.ts  inscription.ts  orchestrator.ts  transaction.ts  utxo.ts
ree-cookie-frontend-v3/src/utils/: address.ts  common.ts  format-number.ts  index.ts  network.ts
ree-cookie-frontend-v3/src/utils/tx-helper/: auction.ts  claim.ts  common.ts  deposit.ts  index.ts  reclaim.ts  settle.ts
ree-cookie-frontend/.zed/: settings.json
ree-cookie-frontend/src/: App.tsx  main.tsx
ree-cookie-frontend/src/api/: maestro.ts  mempool.ts  unisat.ts
ree-cookie-frontend/src/canister/cookie/: actor.ts  service.did.d.ts  service.did.js
ree-cookie-frontend/src/canister/etching/: actor.ts  service.did.d.ts  service.did.js
ree-cookie-frontend/src/canister/orchestrator/: actor.ts  service.did.d.ts  service.did.js
ree-cookie-frontend/src/canister/rich-swap/: actor.ts  service.did.js
ree-cookie-frontend/src/components/: AccountButton.tsx  AddLiquidity.tsx  ConnectButton.tsx  ConnectDialog.tsx  ConnectWalletFirstButton.tsx  Register.tsx
ree-cookie-frontend/src/components/modals/: ConnetWalletModal.tsx  CreateGameModal.tsx
ree-cookie-frontend/src/components/topbar/: account-button.tsx  index.tsx
ree-cookie-frontend/src/constants/: coin-list.ts  wallet.ts
ree-cookie-frontend/src/hooks/: use-fee-rate.ts  use-pool.ts  use-utxos.ts
ree-cookie-frontend/src/layout/: Topbar.tsx
ree-cookie-frontend/src/pages/: Debug.tsx  Etch.tsx  Game.tsx  Home.tsx
ree-cookie-frontend/src/store/: spent-utxos.ts
ree-cookie-frontend/src/utils/: address.ts  chain-api.ts  common.ts  format-number.ts
(+6 files in other folders)
