[package]
name = "ree-cookie"
version = "0.2.6"
edition = "2021"

[workspace]
members = ["."]

[lib]
crate-type = ["cdylib"]

[dependencies]

candid = "0.10"
ic-cdk = "0.18.4"
ic-cdk-macros = "0.18.4"
ic-stable-structures = "0.7"
# ic-canisters-http-types = { git = "https://github.com/dfinity/ic", tag = "release-2025-08-14_03-27-base" }
ic-http-types = "0.1.0"
ic-canister-log = { git = "https://github.com/dfinity/ic", tag = "release-2025-08-14_03-27-base" }
# icp-ledger = { git = "https://github.com/dfinity/ic", tag = "release-2025-08-14_03-27-base" }
icrc-ledger-client = { git = "https://github.com/dfinity/ic", tag = "release-2025-08-14_03-27-base" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic", tag = "release-2025-08-14_03-27-base" }

anyhow =  "1"
thiserror = "1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
cfg-if = "1.0"
time = "0.3"

# ree-exchange-sdk = { git = "https://github.com/octopus-network/ree-exchange-sdk.git", rev="b5bb7181449d3535de27239a6c0a03fbcf29e418" }
ree-exchange-sdk = { git = "https://github.com/octopus-network/ree-exchange-sdk.git", rev="1fb9900d60081f262cc6ad9c92a3604ae38612e1" }

bincode = "1.3.3"
itertools = "0.14.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
ic-agent = "0.39"

[features]
default = ["testnet"]
testnet = []
